--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -177,6 +177,11 @@
     padding: 8px 8px 8px 16px;
   }
 }
+.styledConnect:has([data-testid="rk-wrong-network-button"]) {
+  button {
+    justify-content: center;
+  }
+}
 .styledConnect:has([data-testid='rk-account-button']) {
   button {
     background: rgba(255, 255, 255, 0.1) !important;
